[package]
name = "smeagol"
version = "0.2.0-alpha"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
description = "Conway's Game of Life using HashLife and SIMD"
repository = "https://github.com/billyrieger/smeagol"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
publish = false

[dependencies]
derive_more = "0.99.17"
fnv = "1.0.7"
indexmap = "1.9.1"

[dev-dependencies]
