[package]
name = "smeagol-cli"
version = "0.1.0"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
edition = "2018"

[dependencies]
braille = "1.0"
clap = "2.32"
cursive = "0.9"
smeagol = { path = "../smeagol" }

[dev-dependencies]
assert_cmd = "0.11"

[[bin]]
name = "smeagol"
path = "src/main.rs"
