[package]
name = "smeagol"
version = "0.1.0"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
edition = "2018"

[features]
default = ["export-png", "import-rle"]

export-png = ["png"]
export-svg = ["svg"]
import-rle = ["btoi", "nom"]

[dependencies]
hashbrown = "0.1"
rand = "0.6"
btoi = { version = "0.4", optional = true }
nom = { version = "4.2", optional = true }
png = { version = "0.14", optional = true }
svg = { version = "0.5.12", optional = true }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
