[package]
name = "smeagol"
version = "0.1.0"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
edition = "2018"

[dependencies]
hashbrown = "0.1"
packed_simd = "0.3"
smeagol-mc = { path = "../smeagol-mc" }
smeagol-rle = { path = "../smeagol-rle" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
